# codeslayer.spike

./: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  spike.codeslayer-plugin.in
.codeslayer/: autotools.conf  ctags.conf
codeslayer.config/: autotools.conf  launcher.conf
m4/.svn/: all-wcprops  entries
src/: Makefile.am  Makefile.in  spike-plugin.c
src/.svn/: all-wcprops  entries
src/.svn/text-base/: Makefile.in.svn-base
